syntax = "proto3";
package discovery.zephyr.solo.io;
option go_package = "github.com/solo-io/service-mesh-hub/pkg/api/discovery.zephyr.solo.io/v1alpha1/types";

import "service-mesh-hub/api/core/v1alpha1/ref.proto";

/*
    Representation of a Kubernetes cluster that has been registered in Service Mesh Hub.
*/
message KubernetesClusterSpec {
    // pointer to secret which contains the kubeconfig with information to connect to the remote cluster.
    core.zephyr.solo.io.ResourceRef secret_ref = 1;
    // context to use within the kubeconfig pointed to by the above reference
    string context = 2;
    // version of kubernetes
    string version = 3;
    // cloud provider, empty if unknown
    string cloud = 4;

    // namespace to use when writing Service Mesh Hub resources to this cluster
    string write_namespace = 5;
}
